api-getway setup

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,11 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+# Ignore all node_modules in the whole repo
+**/node_modules/
+# Ignore all .env files in the whole repo
+**/.env
+
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
