--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "api-getway",
+  "name": "user-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,12 +11,11 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "axios": "^1.13.2",
     "consul": "^2.0.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.3",
-    "jwks-rsa": "^3.2.0"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
