--- a/services/order-service/package.json
+++ b/services/order-service/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "amqplib": "^0.10.9",
     "consul": "^2.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
